--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,15 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+#Login_link{
+  display: flex;
+  margin-top: 30px;
+  background-color: palevioletred;
+  gap: 40px;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  color: white;
 }
